--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 # Burger 2
 
-Replacing Sequelize with old fashioned ORM.
+Replacing old fashioned ORM with Sequelize.
 Simple burger game utilizing MySQL, Node, Express, handlebars, and Sequelize. 
 
 Three different burgers in this app; each time a burger is consumed, corresponding column in MySQL would be changed through ORM.
